-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.7
-
OS X, Linux g++ 4.9.1.
-
02a730331e123d2db778c8af62d7c0e3098da813
OS X: https://codereview.qt-project.org/#/c/143304/
XCB: https://codereview.qt-project.org/#/c/143252/
OS X stack trace:
QT_PLUGIN_PATH=/Users/qt/work/qt/qtbase/plugins DYLD_FRAMEWORK_PATH=/Users/qt/work/qt/qtbase/lib${DYLD_FRAMEWORK_PATH:+:$DYLD_FRAMEWORK_PATH} ./tst_qhelpcontentmodel.app/Contents/MacOS/tst_qhelpcontentmodel -o /Users/qt/work/testresults/tests/auto/qhelpcontentmodel024339293,xml -o -,txt ********* Start testing of tst_QHelpContentModel ********* Config: Using QtTest library 5.7.0, Qt 5.7.0 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 6.0 (clang-600.0.56) (Apple)) PASS : tst_QHelpContentModel::initTestCase() ========= Received signal, dumping stack ============== (lldb) process attach --pid 2338 Process 2338 stopped Executable module set to "/Users/qt/work/qt/qttools/tests/auto/qhelpcontentmodel/./tst_qhelpcontentmodel.app/Contents/MacOS/tst_qhelpcontentmodel". Architecture set to: x86_64-apple-macosx. (lldb) bt all * thread #1: tid = 0x1625, 0x00007fff893f6e3a libsystem_kernel.dylib`__wait4_nocancel + 10, queue = 'com.apple.main-thread', stop reason = signal SIGSTOP * frame #0: 0x00007fff893f6e3a libsystem_kernel.dylib`__wait4_nocancel + 10 frame #1: 0x00007fff838b6090 libsystem_c.dylib`system + 425 frame #2: 0x0000000103aaee76 QtTest`stackTrace() + 150 frame #3: 0x0000000103aaed95 QtTest`QTest::FatalSignalHandler::signal(int) + 197 frame #4: 0x00007fff8619e5aa libsystem_platform.dylib`_sigtramp + 26 frame #5: 0x000000010769b212 libqsqlite.dylib`QList<QSQLiteResult*>::removeOne(QSQLiteResult* const&) + 18 frame #6: 0x0000000107697e85 libqsqlite.dylib`QSQLiteResult::~QSQLiteResult() + 85 frame #7: 0x0000000107697f1e libqsqlite.dylib`QSQLiteResult::~QSQLiteResult() + 14 frame #8: 0x0000000103df934d QtSql`QSqlQuery::~QSqlQuery() + 61 frame #9: 0x00000001026c764f QtHelp`QHelpCollectionHandler::~QHelpCollectionHandler() + 63 frame #10: 0x00000001026c776e QtHelp`QHelpCollectionHandler::~QHelpCollectionHandler() + 14 frame #11: 0x000000010269d35b QtHelp`QHelpEngineCorePrivate::~QHelpEngineCorePrivate() + 43 frame #12: 0x00000001026a244e QtHelp`QHelpEnginePrivate::~QHelpEnginePrivate() + 14 frame #13: 0x000000010269e556 QtHelp`QHelpEngineCore::~QHelpEngineCore() + 38 frame #14: 0x000000010268c0af tst_qhelpcontentmodel`tst_QHelpContentModel::setupContents() + 1151 frame #15: 0x000000010365e14b QtCore`QMetaMethod::invoke(QObject*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) const + 1003 frame #16: 0x000000010365d7fc QtCore`QMetaObject::invokeMethod(QObject*, char const*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) + 2140 frame #17: 0x0000000103ab4680 QtTest`QTest::qInvokeTestMethod(char const*, char const*, QTest::WatchDog*) + 1520 frame #18: 0x0000000103aaf777 QtTest`QTest::qExec(QObject*, int, char**) + 1671 frame #19: 0x000000010268ce59 tst_qhelpcontentmodel`main + 137 frame #20: 0x000000010268b7a4 tst_qhelpcontentmodel`start + 52 thread #2: tid = 0x1626, 0x00007fff893f6e6a libsystem_kernel.dylib`__workq_kernreturn + 10 frame #0: 0x00007fff893f6e6a libsystem_kernel.dylib`__workq_kernreturn + 10 frame #1: 0x00007fff82fd1f08 libsystem_pthread.dylib`_pthread_wqthread + 330 frame #2: 0x00007fff82fd4fb9 libsystem_pthread.dylib`start_wqthread + 13 thread #3: tid = 0x1627, 0x00007fff893f7662 libsystem_kernel.dylib`kevent64 + 10, queue = 'com.apple.libdispatch-manager' frame #0: 0x00007fff893f7662 libsystem_kernel.dylib`kevent64 + 10 frame #1: 0x00007fff8aa96421 libdispatch.dylib`_dispatch_mgr_invoke + 239 frame #2: 0x00007fff8aa96136 libdispatch.dylib`_dispatch_mgr_thread + 52 thread #4: tid = 0x1628, 0x00007fff893f6e6a libsystem_kernel.dylib`__workq_kernreturn + 10 frame #0: 0x00007fff893f6e6a libsystem_kernel.dylib`__workq_kernreturn + 10 frame #1: 0x00007fff82fd1f08 libsystem_pthread.dylib`_pthread_wqthread + 330 frame #2: 0x00007fff82fd4fb9 libsystem_pthread.dylib`start_wqthread + 13 thread #5: tid = 0x165d, 0x00007fff893f6e6a libsystem_kernel.dylib`__workq_kernreturn + 10 frame #0: 0x00007fff893f6e6a libsystem_kernel.dylib`__workq_kernreturn + 10 frame #1: 0x00007fff82fd1f08 libsystem_pthread.dylib`_pthread_wqthread + 330 frame #2: 0x00007fff82fd4fb9 libsystem_pthread.dylib`start_wqthread + 13 thread #6: tid = 0x166a, 0x00007fff893f6716 libsystem_kernel.dylib`__psynch_cvwait + 10, name = 'QThread' frame #0: 0x00007fff893f6716 libsystem_kernel.dylib`__psynch_cvwait + 10 frame #1: 0x00007fff82fd2c3b libsystem_pthread.dylib`_pthread_cond_wait + 727 frame #2: 0x0000000103493cd0 QtCore`QWaitConditionPrivate::wait_relative(unsigned long) + 288 frame #3: 0x0000000103493b0b QtCore`QWaitConditionPrivate::wait(unsigned long) + 43 frame #4: 0x00000001034939e2 QtCore`QWaitCondition::wait(QMutex*, unsigned long) + 162 frame #5: 0x0000000103ab85e6 QtTest`QTest::WatchDog::run() + 70 frame #6: 0x00000001034924fb QtCore`QThreadPrivate::start(void*) + 363 frame #7: 0x00007fff82fd0899 libsystem_pthread.dylib`_pthread_body + 138 frame #8: 0x00007fff82fd072a libsystem_pthread.dylib`_pthread_start + 137 frame #9: 0x00007fff82fd4fc9 libsystem_pthread.dylib`thread_start + 13 thread #7: tid = 0x166e, 0x00007fff893f6e6a libsystem_kernel.dylib`__workq_kernreturn + 10 frame #0: 0x00007fff893f6e6a libsystem_kernel.dylib`__workq_kernreturn + 10 frame #1: 0x00007fff82fd1f08 libsystem_pthread.dylib`_pthread_wqthread + 330 frame #2: 0x00007fff82fd4fb9 libsystem_pthread.dylib`start_wqthread + 13 thread #8: tid = 0x166f, 0x00007fff893f6e6a libsystem_kernel.dylib`__workq_kernreturn + 10 frame #0: 0x00007fff893f6e6a libsystem_kernel.dylib`__workq_kernreturn + 10 frame #1: 0x00007fff82fd1f08 libsystem_pthread.dylib`_pthread_wqthread + 330 frame #2: 0x00007fff82fd4fb9 libsystem_pthread.dylib`start_wqthread + 13 thread #9: tid = 0x1675, 0x00007fff893f2a1a libsystem_kernel.dylib`mach_msg_trap + 10 frame #0: 0x00007fff893f2a1a libsystem_kernel.dylib`mach_msg_trap + 10 frame #1: 0x00007fff893f1d18 libsystem_kernel.dylib`mach_msg + 64 frame #2: 0x00007fff8d5ccf15 CoreFoundation`__CFRunLoopServiceMachPort + 181 frame #3: 0x00007fff8d5cc539 CoreFoundation`__CFRunLoopRun + 1161 frame #4: 0x00007fff8d5cbe75 CoreFoundation`CFRunLoopRunSpecific + 309 frame #5: 0x00007fff86ccd05e AppKit`_NSEventThread + 144 frame #6: 0x00007fff82fd0899 libsystem_pthread.dylib`_pthread_body + 138 frame #7: 0x00007fff82fd072a libsystem_pthread.dylib`_pthread_start + 137 frame #8: 0x00007fff82fd4fc9 libsystem_pthread.dylib`thread_start + 13 (lldb) quit ========= End of stack trace ============== QFATAL : tst_QHelpContentModel::setupContents() Received signal 11 Function time: 1038ms Total time: 1039ms FAIL! : tst_QHelpContentModel::setupContents() Received a fatal error. Loc: [Unknown file(0)] Totals: 1 passed, 1 failed, 0 skipped, 0 blacklisted, 11746ms ********* Finished testing of tst_QHelpContentModel *********